# floating-agent

./: .gitignore  .pre-commit-config.yaml  .quality-gate.json  .secrets.baseline  AGENTS.md  CLAUDE.md  DECISIONS.md  GitVersion.yml  Makefile  README.md  cliff.toml  opencode.json  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/instructions/: frontend_guidelines.instructions.md  python_guidelines.instructions.md
.github/workflows/: ci.yml  mutation-testing.yml  pages.yml  pre-commit.yml  quality-gate-check.yml  release.yml  sonar.yml
.gitnexus/: meta.json
daemon/: Dockerfile.test  pyproject.toml
daemon/floating_agent/: __init__.py  main.py  models.py
daemon/floating_agent/api/: __init__.py
daemon/floating_agent/api/routers/: __init__.py  health.py  system.py
daemon/floating_agent/plugins/: __init__.py  system.py
daemon/tests/: test_health.py  test_system.py
electron/: eslint.config.js  eslint.config.mjs  package-lock.json  package.json
electron/src/: main.ts  preload.ts
scripts/: quality_gate.py
tests/: README.md
ui/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
ui/src/: App.module.scss  App.tsx  main.tsx
ui/src/components/: BackendConnectionBanner.module.scss  BackendConnectionBanner.tsx
ui/src/hooks/: useBackendStatus.ts
ui/src/lib/: daemon.ts
ui/src/modules/system/: SystemModule.module.scss  (+2 more)
ui/src/styles/: global.scss
ui/src/test/: useSystemStats.test.tsx
ui/src/types/: electron.d.ts  scss.d.ts
